lib/ruml/grammar/src/RumlParser.java
// Generated from Ruml.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RumlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, IDENTIFIER=17, 
		NEWLINE=18, WS=19, LINE_COMMENT=20, COMMENT=21, SYMBOL=22, NUMBER=23, 
		STRING=24, KEYWORD_PARAM_NAME=25;
	public static final int
		RULE_ruml = 0, RULE_module_def = 1, RULE_module_name = 2, RULE_class_def = 3, 
		RULE_class_name = 4, RULE_super_class_name = 5, RULE_body = 6, RULE_include_def = 7, 
		RULE_extend_def = 8, RULE_attributes_def = 9, RULE_class_method_def = 10, 
		RULE_class_method_name = 11, RULE_instance_method_def = 12, RULE_instance_method_name = 13, 
		RULE_params = 14, RULE_param = 15, RULE_normal_param = 16, RULE_keyword_param = 17, 
		RULE_default_param = 18, RULE_value = 19;
	public static final String[] ruleNames = {
		"ruml", "module_def", "module_name", "class_def", "class_name", "super_class_name", 
		"body", "include_def", "extend_def", "attributes_def", "class_method_def", 
		"class_method_name", "instance_method_def", "instance_method_name", "params", 
		"param", "normal_param", "keyword_param", "default_param", "value"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'module'", "'end'", "'class'", "'<'", "'include'", "'extend'", 
		"'attr_reader'", "','", "'attr_writer'", "'attr_accessor'", "'def'", "'.'", 
		"'self.'", "'('", "')'", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "IDENTIFIER", "NEWLINE", "WS", "LINE_COMMENT", 
		"COMMENT", "SYMBOL", "NUMBER", "STRING", "KEYWORD_PARAM_NAME"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ruml.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RumlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RumlContext extends ParserRuleContext {
		public List<Module_defContext> module_def() {
			return getRuleContexts(Module_defContext.class);
		}
		public Module_defContext module_def(int i) {
			return getRuleContext(Module_defContext.class,i);
		}
		public List<Class_defContext> class_def() {
			return getRuleContexts(Class_defContext.class);
		}
		public Class_defContext class_def(int i) {
			return getRuleContext(Class_defContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(RumlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RumlParser.NEWLINE, i);
		}
		public RumlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruml; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitRuml(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RumlContext ruml() throws RecognitionException {
		RumlContext _localctx = new RumlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ruml);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__2) {
				{
				setState(54);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(40);
					module_def();
					setState(44);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(41);
						match(NEWLINE);
						}
						}
						setState(46);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case T__2:
					{
					setState(47);
					class_def();
					setState(51);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(48);
						match(NEWLINE);
						}
						}
						setState(53);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_defContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RumlParser.IDENTIFIER, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(RumlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RumlParser.NEWLINE, i);
		}
		public Module_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitModule_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_defContext module_def() throws RecognitionException {
		Module_defContext _localctx = new Module_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(T__0);
			setState(60);
			match(IDENTIFIER);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(61);
				match(NEWLINE);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			body();
			setState(68);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RumlParser.IDENTIFIER, 0); }
		public Module_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitModule_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_nameContext module_name() throws RecognitionException {
		Module_nameContext _localctx = new Module_nameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_module_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_defContext extends ParserRuleContext {
		public Class_nameContext class_name() {
			return getRuleContext(Class_nameContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public Super_class_nameContext super_class_name() {
			return getRuleContext(Super_class_nameContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(RumlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RumlParser.NEWLINE, i);
		}
		public Class_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitClass_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_defContext class_def() throws RecognitionException {
		Class_defContext _localctx = new Class_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__2);
			setState(73);
			class_name();
			setState(76);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(74);
				match(T__3);
				setState(75);
				super_class_name();
				}
			}

			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(78);
				match(NEWLINE);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			body();
			setState(85);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RumlParser.IDENTIFIER, 0); }
		public Class_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitClass_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_nameContext class_name() throws RecognitionException {
		Class_nameContext _localctx = new Class_nameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_class_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Super_class_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RumlParser.IDENTIFIER, 0); }
		public Super_class_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_super_class_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitSuper_class_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Super_class_nameContext super_class_name() throws RecognitionException {
		Super_class_nameContext _localctx = new Super_class_nameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_super_class_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<Include_defContext> include_def() {
			return getRuleContexts(Include_defContext.class);
		}
		public Include_defContext include_def(int i) {
			return getRuleContext(Include_defContext.class,i);
		}
		public List<Extend_defContext> extend_def() {
			return getRuleContexts(Extend_defContext.class);
		}
		public Extend_defContext extend_def(int i) {
			return getRuleContext(Extend_defContext.class,i);
		}
		public List<Attributes_defContext> attributes_def() {
			return getRuleContexts(Attributes_defContext.class);
		}
		public Attributes_defContext attributes_def(int i) {
			return getRuleContext(Attributes_defContext.class,i);
		}
		public List<Class_method_defContext> class_method_def() {
			return getRuleContexts(Class_method_defContext.class);
		}
		public Class_method_defContext class_method_def(int i) {
			return getRuleContext(Class_method_defContext.class,i);
		}
		public List<Instance_method_defContext> instance_method_def() {
			return getRuleContexts(Instance_method_defContext.class);
		}
		public Instance_method_defContext instance_method_def(int i) {
			return getRuleContext(Instance_method_defContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(RumlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RumlParser.NEWLINE, i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) {
				{
				{
				setState(96);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(91);
					include_def();
					}
					break;
				case 2:
					{
					setState(92);
					extend_def();
					}
					break;
				case 3:
					{
					setState(93);
					attributes_def();
					}
					break;
				case 4:
					{
					setState(94);
					class_method_def();
					}
					break;
				case 5:
					{
					setState(95);
					instance_method_def();
					}
					break;
				}
				setState(99); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(98);
					match(NEWLINE);
					}
					}
					setState(101); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_defContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RumlParser.IDENTIFIER, 0); }
		public Include_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitInclude_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Include_defContext include_def() throws RecognitionException {
		Include_defContext _localctx = new Include_defContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_include_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__4);
			setState(109);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Extend_defContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RumlParser.IDENTIFIER, 0); }
		public Extend_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extend_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitExtend_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Extend_defContext extend_def() throws RecognitionException {
		Extend_defContext _localctx = new Extend_defContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_extend_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__5);
			setState(112);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attributes_defContext extends ParserRuleContext {
		public Attributes_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes_def; }
	 
		public Attributes_defContext() { }
		public void copyFrom(Attributes_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Attr_readerContext extends Attributes_defContext {
		public List<TerminalNode> SYMBOL() { return getTokens(RumlParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(RumlParser.SYMBOL, i);
		}
		public Attr_readerContext(Attributes_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitAttr_reader(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Attr_accessorContext extends Attributes_defContext {
		public List<TerminalNode> SYMBOL() { return getTokens(RumlParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(RumlParser.SYMBOL, i);
		}
		public Attr_accessorContext(Attributes_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitAttr_accessor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Attr_writterContext extends Attributes_defContext {
		public List<TerminalNode> SYMBOL() { return getTokens(RumlParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(RumlParser.SYMBOL, i);
		}
		public Attr_writterContext(Attributes_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitAttr_writter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attributes_defContext attributes_def() throws RecognitionException {
		Attributes_defContext _localctx = new Attributes_defContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_attributes_def);
		int _la;
		try {
			setState(141);
			switch (_input.LA(1)) {
			case T__6:
				_localctx = new Attr_readerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(T__6);
				setState(115);
				match(SYMBOL);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(116);
					match(T__7);
					setState(117);
					match(SYMBOL);
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__8:
				_localctx = new Attr_writterContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(T__8);
				setState(124);
				match(SYMBOL);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(125);
					match(T__7);
					setState(126);
					match(SYMBOL);
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__9:
				_localctx = new Attr_accessorContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				match(T__9);
				setState(133);
				match(SYMBOL);
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(134);
					match(T__7);
					setState(135);
					match(SYMBOL);
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_method_defContext extends ParserRuleContext {
		public Class_method_nameContext class_method_name() {
			return getRuleContext(Class_method_nameContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(RumlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RumlParser.NEWLINE, i);
		}
		public Class_method_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_method_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitClass_method_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_method_defContext class_method_def() throws RecognitionException {
		Class_method_defContext _localctx = new Class_method_defContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_class_method_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__10);
			setState(144);
			class_method_name();
			setState(145);
			params();
			setState(147); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				match(NEWLINE);
				}
				}
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(151);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_method_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RumlParser.IDENTIFIER, 0); }
		public Class_nameContext class_name() {
			return getRuleContext(Class_nameContext.class,0);
		}
		public Class_method_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_method_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitClass_method_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_method_nameContext class_method_name() throws RecognitionException {
		Class_method_nameContext _localctx = new Class_method_nameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_class_method_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(153);
				class_name();
				setState(154);
				match(T__11);
				}
				break;
			case T__12:
				{
				setState(156);
				match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(159);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Instance_method_defContext extends ParserRuleContext {
		public Instance_method_nameContext instance_method_name() {
			return getRuleContext(Instance_method_nameContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(RumlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RumlParser.NEWLINE, i);
		}
		public Instance_method_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instance_method_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitInstance_method_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Instance_method_defContext instance_method_def() throws RecognitionException {
		Instance_method_defContext _localctx = new Instance_method_defContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_instance_method_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(T__10);
			setState(162);
			instance_method_name();
			setState(163);
			params();
			setState(165); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(164);
				match(NEWLINE);
				}
				}
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(169);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Instance_method_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RumlParser.IDENTIFIER, 0); }
		public Instance_method_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instance_method_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitInstance_method_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Instance_method_nameContext instance_method_name() throws RecognitionException {
		Instance_method_nameContext _localctx = new Instance_method_nameContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_instance_method_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RumlVisitor ) return ((RumlVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(173);
				match(T__13);
				setState(174);
				param();
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(175);
					match(T__7);
					setState(176);
					param();
					}
					}
					setState(181);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(182);
				match(T__14);
				}
				}
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
